--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "husky": "^8.0.3",
     "lerna": "^6.6.2",
     "lint-staged": "^13.3.0",
+    "matcher": "^5.0.0",
     "only-allow": "^1.1.1",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
