--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,6 @@
 {
-  "version": "0.15.2",
-  "workspaces": ["packages/*"]
+  "version": "1.0.0-alpha.0",
+  "workspaces": [
+    "packages/*"
+  ]
 }
