--- a/package.json
+++ b/package.json
@@ -13,30 +13,21 @@
     "dev": "win-scripts turbo dev --parallel",
     "format": "prettier --cache --write .",
     "preinstall": "npx only-allow pnpm",
-    "prepare": "husky install",
+    "prepare": "lefthook install",
     "release": "win-scripts release",
     "setup:webstorm": "win-scripts setupWebStorm",
     "sort-package-json": "sort-package-json \"./package.json\" \"packages/*/package.json\"",
     "turbo:clean": "rimraf .turbo && rimraf packages/**/.turbo"
   },
-  "lint-staged": {
-    "*.{jsx,less,md}": [
-      "prettier --no-error-on-unmatched-pattern --cache --write"
-    ],
-    "*.ts?(x)": [
-      "prettier --no-error-on-unmatched-pattern --cache --parser=typescript --write"
-    ]
-  },
   "devDependencies": {
-    "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.17.15",
     "@winner-fed/prettier-config-win": "^1.0.0",
+    "@winner-fed/utils": "*",
     "check-dependency-version-consistency": "^4.1.0",
     "father": "4.3.1",
     "git-repo-info": "^2.1.1",
-    "husky": "^8.0.3",
+    "lefthook": "^1.12.2",
     "lerna": "^6.6.2",
-    "lint-staged": "^13.3.0",
     "matcher": "^5.0.0",
     "only-allow": "^1.1.1",
     "prettier": "^3.3.3",
@@ -44,7 +35,6 @@
     "prettier-plugin-packagejson": "^2.5.1",
     "rimraf": "^5.0.10",
     "sort-package-json": "^2.10.0",
-    "ts-node": "^10.9.1",
     "tsx": "4.17.0",
     "turbo": "1.9.3",
     "typescript": "^4.9.5",
