fix: 更新 lefthook 配置以使用 npx 运行 commitlint，更新 create-win 包版本至 1.0.0

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -71,4 +71,4 @@ post-merge:
 commit-msg:
   commands:
     commitlint:
-      run: win-scripts verifyCommit $1
+      run: npx win-scripts verifyCommit $1
