--- a/packages/create-win/package.json
+++ b/packages/create-win/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@winjs-dev/create-win",
-  "version": "1.0.1",
+  "version": "1.0.2-alpha.0",
   "description": "@winjs-dev/create-win",
   "keywords": [
     "WinJS",
